<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs160.apmadhani.represent.DetailedView">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E53935"
        android:id="@+id/candidate_card_detailed">

        <ImageView
            android:layout_margin="5dp"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:id = "@+id/member_pic"
            android:src="@drawable/lee"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "Barbara Lee (R)"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@id/member_pic"
            android:id="@+id/member_name_detailed"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sample_email@gmail.com"
            android:layout_below="@id/member_name_detailed"
            android:id="@+id/member_email"
            android:layout_toRightOf="@id/member_pic"
            android:textSize="15dp"
            android:textColor="#CCFFFFFF"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/mail"
            android:layout_marginLeft="3dp"
            android:layout_below="@id/member_name_detailed"
            android:layout_toRightOf="@id/member_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="samplewebsite.com"
            android:layout_below="@id/member_email"
            android:layout_toRightOf="@id/member_pic"
            android:id="@+id/member_site"
            android:textSize="15dp"
            android:textColor="#CCFFFFFF"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/link"
            android:layout_below="@id/member_email"
            android:layout_toRightOf="@id/member_site"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/member_site"
            android:layout_toRightOf="@id/member_pic"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:text="Term ends July 5, 2015"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/candidate_card_detailed"
        android:layout_marginTop="20dp"
        android:background="#E53935"
        android:id="@+id/billview"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:id="@+id/billTitle"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:text="Bills Sponsored"/>
        <TextView
            android:layout_below="@id/billTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CCFFFFFF"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/bills"/>
        <TextView
            android:layout_below="@id/billTitle"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CCFFFFFF"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/dates"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/billview"
        android:layout_marginTop="20dp"
        android:background="#E53935"
        android:id="@+id/committees"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:id="@+id/committeeTitle"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:text="Committees"/>
        <TextView
            android:layout_below="@id/committeeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CCFFFFFF"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/committees"/>
    </RelativeLayout>

</RelativeLayout>
