<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context="cs160.apmadhani.represent.CongressionalMobile">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Representatives"
        android:textSize="26.66dp"
        android:textColor="#222222"
        android:id="@+id/representatives"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"/>

    <RelativeLayout
        android:layout_below="@id/representatives"
        android:layout_width="fill_parent"
        android:id="@+id/congressperson"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#E53935"
            android:id="@+id/candidate_card">

            <ImageView
                android:layout_marginRight="5dp"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:id = "@+id/member_pic"
                android:src="@drawable/lee"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Barbara Lee (R)"
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@id/member_pic"
                android:id="@+id/member_name"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lee_email"
                android:layout_below="@id/member_name"
                android:id="@+id/member_email"
                android:layout_toRightOf="@id/member_pic"
                android:textSize="15dp"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/mail"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/member_name"
                android:layout_toRightOf="@id/member_email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lee_site"
                android:layout_below="@id/member_email"
                android:layout_toRightOf="@id/member_pic"
                android:id="@+id/member_site"
                android:textSize="15dp"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="3dp"
                android:src="@drawable/link"
                android:layout_below="@id/member_email"
                android:layout_toRightOf="@id/member_site"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:layout_below="@id/candidate_card">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src = "@drawable/twitter"
                android:id="@+id/twitter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am a republican!"
                android:textSize="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/tweet"
                android:textColor="#444444"
                android:layout_toRightOf="@id/twitter"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:id="@+id/separator"
                android:visibility="visible"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/twitter"/>

            <TextView
                android:layout_margin = "5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learn More..."
                android:onClick="goDetailed"
                android:textSize="15dp"
                android:layout_marginTop = "3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:textColor="#F50057"
                android:layout_below="@id/separator"/>

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Senators"
        android:layout_below="@id/congressperson"
        android:textSize="26.66dp"
        android:textColor="#222222"
        android:id="@+id/senators"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"/>

    <RelativeLayout
        android:layout_below="@id/senators"
        android:layout_width="fill_parent"
        android:id="@+id/congressperson2"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2979FF"
            android:id="@+id/candidate_card2">

            <ImageView
                android:layout_marginRight="5dp"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:id = "@+id/member_pic2"
                android:src="@drawable/boxer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Barbara Boxer (D)"
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@id/member_pic2"
                android:id="@+id/member_name2"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boxer_email"
                android:layout_below="@id/member_name2"
                android:id="@+id/member_email2"
                android:layout_toRightOf="@id/member_pic2"
                android:textSize="15dp"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/mail"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/member_name2"
                android:layout_toRightOf="@id/member_email2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boxer_site"
                android:layout_below="@id/member_email2"
                android:id="@+id/member_site2"
                android:layout_toRightOf="@id/member_pic2"
                android:textSize="15dp"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="3dp"
                android:src="@drawable/link"
                android:layout_below="@id/member_email2"
                android:layout_toRightOf="@id/member_site2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:layout_below="@id/candidate_card2">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src = "@drawable/twitter"
                android:id="@+id/twitter2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am a democrat!"
                android:textSize="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/tweet2"
                android:textColor="#444444"
                android:layout_toRightOf="@id/twitter2"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:id="@+id/separator2"
                android:visibility="visible"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/twitter2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learn More..."
                android:onClick="goDetailed"
                android:textSize="15dp"
                android:layout_marginTop = "3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:textColor="#F50057"
                android:layout_below="@id/separator2"/>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@id/congressperson2"
        android:layout_width="fill_parent"
        android:id="@+id/congressperson3"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:id="@+id/candidate_card3">

            <ImageView
                android:layout_marginRight="5dp"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:id = "@+id/member_pic3"
                android:src="@drawable/feinstein"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Dianne Feinnstein (I)"
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@id/member_pic3"
                android:id="@+id/member_name3"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feinstein_email"
                android:layout_below="@id/member_name3"
                android:id="@+id/member_email3"
                android:layout_toRightOf="@id/member_pic3"
                android:textSize="15dp"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/mail"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/member_name3"
                android:layout_toRightOf="@id/member_email3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feinstein_site"
                android:layout_below="@id/member_email3"
                android:layout_toRightOf="@id/member_pic3"
                android:textSize="15dp"
                android:id="@id/member_site2"
                android:textColor="#CCFFFFFF"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="3dp"
                android:src="@drawable/link"
                android:layout_below="@id/member_email3"
                android:layout_toRightOf="@id/member_site2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:layout_below="@id/candidate_card3">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src = "@drawable/twitter"
                android:id="@+id/twitter3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am an independent!"
                android:textColor="#444444"
                android:textSize="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/tweet3"
                android:layout_toRightOf="@id/twitter3"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:id="@+id/separator3"
                android:visibility="visible"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/twitter3"/>

            <TextView
                android:layout_margin = "5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learn More..."
                android:onClick="goDetailed"
                android:textColor="#F50057"
                android:layout_below="@id/separator3"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
